fix issue with back button on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -398,7 +398,7 @@ h1 {
   .back {
     font-size: 25px;
     margin: 10px;
-    padding: 10px;
+    padding: 0 30px 30px 0;
     position: absolute;
     top: 0;
     left: 0;
